test/fail/capture_func00.v3
//@execute 0=11
def main(a: int) -> int {
	var f = fun => (a, a, a);
	var g = fun => (f, f, f);
	var h = fun => (g, g, g); // TODO: classfile name too long

	var ht = h(), gt0 = ht.0(), gt1 = ht.1(), gt2 = ht.2();
	var gt00 = gt0.0(), gt01 = gt0.1(), gt02 = gt0.2();
	var gt10 = gt1.0(), gt11 = gt1.1(), gt12 = gt1.2();
	var gt20 = gt2.0(), gt21 = gt2.1(), gt22 = gt2.2();

	if (gt00 != gt01) return -1;
	if (gt00 != gt02) return -2;
	if (gt00 != gt10) return -2;

	if (gt10 != gt11) return -11;
	if (gt10 != gt12) return -12;
	if (gt10 != gt20) return -2;

	if (gt20 != gt21) return -21;
	if (gt20 != gt22) return -22;

	return 11;
}